[gd_scene load_steps=13 format=2]

[ext_resource path="res://Source/Levels/Level_05.gd" type="Script" id=1]
[ext_resource path="res://Source/InteractableItems/Balances/Balance_If_Else_Diamond_Else.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/InteractableItems/Chests/Chest_Show_Potion_Invert.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/InteractableItems/Balances/Balance_If_Else_Diamond_If.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/InteractableItems/Potions/Potion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/InteractableItems/Chests/Chest_Show_Potion.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Source/Levels/MedievalTileSet.tres" type="TileSet" id=8]
[ext_resource path="res://Sprites/Objects/InteractableItems/Scrolls/scroll2_transparent.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Backgrounds/sala_if.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Objects/InteractableItems/Potions/green_potion_transparent.png" type="Texture" id=11]
[ext_resource path="res://Source/InteractableItems/Doors/Door.tscn" type="PackedScene" id=12]

[node name="Level_05" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 552.364, 143.826 )
scale = Vector2( 1.00613, 1.00576 )
texture = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 48, 48 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -393225, 96, 0, -393224, 96, 0, -393223, 96, 0, -393222, 96, 0, -393221, 96, 0, -393220, 96, 0, -393219, 96, 0, -393218, 96, 0, -393217, 96, 0, -458752, 96, 0, -458751, 96, 0, -458750, 96, 0, -458749, 96, 0, -458748, 96, 0, -458747, 96, 0, -458746, 96, 0, -458745, 96, 0, -458744, 96, 0, -458743, 96, 0, -458742, 96, 0, -458741, 96, 0, -458740, 96, 0, -458739, 96, 0, -458738, 96, 0, -458737, 96, 0, -458736, 96, 0, -458735, 96, 0, -458734, 96, 0, -458733, 96, 0, -458732, 96, 0, -458731, 96, 0, -458730, 96, 0, -458729, 96, 0, -458728, 96, 0, -458727, 96, 0, -458726, 96, 0, -458725, 96, 0, -458724, 96, 0, -458723, 96, 0, -458722, 96, 0, -458721, 96, 0, -327689, 96, 0, -327688, 96, 0, -327687, 96, 0, -327686, 96, 0, -327685, 96, 0, -327684, 96, 0, -327683, 96, 0, -327682, 96, 0, -327681, 96, 0, -393216, 96, 0, -393215, 96, 0, -393214, 96, 0, -393213, 118, 0, -393212, 118, 0, -393211, 96, 0, -393210, 96, 0, -393209, 96, 0, -393208, 96, 0, -393207, 96, 0, -393206, 96, 0, -393205, 96, 0, -393204, 96, 0, -393203, 96, 0, -393202, 96, 0, -393201, 96, 0, -393200, 96, 0, -393199, 96, 0, -393198, 96, 0, -393197, 96, 0, -393196, 96, 0, -393195, 96, 0, -393194, 96, 0, -393193, 96, 0, -393192, 96, 0, -393191, 96, 0, -393190, 96, 0, -393189, 96, 0, -393188, 96, 0, -393187, 96, 0, -393186, 96, 0, -393185, 96, 0, -262153, 96, 0, -262152, 96, 0, -262151, 96, 0, -262150, 118, 0, -262149, 118, 0, -262148, 96, 0, -262147, 118, 0, -262146, 118, 0, -262145, 118, 0, -327680, 118, 0, -327679, 118, 0, -327678, 118, 0, -327677, 96, 0, -327676, 96, 0, -327675, 118, 0, -327674, 118, 0, -327673, 118, 0, -327672, 118, 0, -327671, 118, 0, -327670, 118, 0, -327669, 118, 0, -327668, 118, 0, -327667, 118, 0, -327666, 118, 0, -327665, 118, 0, -327664, 118, 0, -327663, 118, 0, -327662, 118, 0, -327661, 118, 0, -327660, 96, 0, -327659, 96, 0, -327658, 96, 0, -327657, 96, 0, -327656, 96, 0, -327655, 96, 0, -327654, 96, 0, -327653, 96, 0, -327652, 96, 0, -327651, 96, 0, -327650, 96, 0, -327649, 96, 0, -196617, 96, 0, -196616, 96, 0, -196615, 118, 0, -196614, 96, 0, -196613, 96, 0, -196612, 118, 0, -196611, 96, 0, -196610, 96, 0, -196609, 96, 0, -262144, 96, 0, -262143, 96, 0, -262142, 96, 0, -262141, 96, 0, -262140, 96, 0, -262139, 118, 0, -262138, 118, 0, -262137, 118, 0, -262136, 118, 0, -262135, 118, 0, -262134, 118, 0, -262133, 118, 0, -262132, 118, 0, -262131, 118, 0, -262130, 118, 0, -262129, 118, 0, -262128, 96, 0, -262127, 96, 0, -262126, 96, 0, -262125, 96, 0, -262124, 118, 0, -262123, 96, 0, -262122, 96, 0, -262121, 96, 0, -262120, 96, 0, -262119, 96, 0, -262118, 96, 0, -262117, 96, 0, -262116, 96, 0, -262115, 96, 0, -262114, 96, 0, -262113, 96, 0, -131081, 97, 0, -131080, 118, 0, -131079, 97, 0, -131078, 97, 0, -131077, 97, 0, -131076, 118, 0, -131075, 118, 0, -131074, 118, 0, -131073, 118, 0, -196608, 118, 0, -196607, 118, 0, -196606, 118, 0, -196605, 97, 0, -196604, 97, 0, -196603, 97, 0, -196602, 97, 0, -196601, 97, 0, -196600, 118, 0, -196599, 118, 0, -196598, 118, 0, -196597, 118, 0, -196596, 118, 0, -196595, 118, 0, -196594, 96, 0, -196593, 96, 0, -196592, 118, 0, -196591, 118, 0, -196590, 118, 0, -196589, 118, 0, -196588, 118, 0, -196587, 96, 0, -196586, 96, 0, -196585, 96, 0, -196584, 96, 0, -196583, 118, 0, -196582, 118, 0, -196581, 97, 0, -196580, 97, 0, -196579, 97, 0, -196578, 97, 0, -196577, 97, 0, -65545, 97, 0, -65544, 118, 0, -65543, 97, 0, -65542, 97, 0, -65541, 97, 0, -65540, 118, 0, -65539, 96, 0, -65538, 96, 0, -65537, 96, 0, -131072, 96, 0, -131071, 97, 0, -131070, 97, 0, -131069, 97, 0, -131068, 96, 0, -131067, 96, 0, -131066, 96, 0, -131065, 97, 0, -131064, 97, 0, -131063, 96, 0, -131062, 96, 0, -131061, 96, 0, -131060, 96, 0, -131059, 96, 0, -131058, 118, 0, -131057, 118, 0, -131056, 118, 0, -131055, 118, 0, -131054, 118, 0, -131053, 118, 0, -131052, 118, 0, -131051, 118, 0, -131050, 118, 0, -131049, 118, 0, -131048, 96, 0, -131047, 96, 0, -131046, 118, 0, -131045, 97, 0, -131044, 97, 0, -131043, 97, 0, -131042, 97, 0, -131041, 97, 0, -9, 97, 0, -8, 118, 0, -7, 96, 0, -6, 97, 0, -5, 97, 0, -4, 96, 0, -3, 118, 0, -2, 118, 0, -1, 118, 0, -65536, 115, 0, -65535, 117, 0, -65534, 117, 0, -65533, 117, 0, -65532, 113, 0, -65531, 117, 0, -65530, 117, 0, -65529, 117, 0, -65528, 113, 0, -65527, 117, 0, -65526, 117, 0, -65525, 117, 0, -65524, 113, 0, -65523, 117, 0, -65522, 117, 0, -65521, 117, 0, -65520, 113, 0, -65519, 117, 0, -65518, 117, 0, -65517, 113, 0, -65516, 117, 0, -65515, 113, 0, -65514, 104, 0, -65513, 118, 0, -65512, 118, 0, -65511, 118, 0, -65510, 118, 0, -65509, 97, 0, -65508, 97, 0, -65507, 97, 0, -65506, 97, 0, -65505, 97, 0, 65527, 97, 0, 65528, 118, 0, 65529, 97, 0, 65530, 96, 0, 65531, 97, 0, 65532, 118, 0, 65533, 118, 0, 65534, 118, 0, 65535, 85, 0, 23, 88, 0, 24, 118, 0, 25, 96, 0, 26, 118, 0, 27, 97, 0, 28, 97, 0, 29, 97, 0, 30, 97, 0, 31, 97, 0, 131063, 97, 0, 131064, 118, 0, 131065, 97, 0, 131066, 96, 0, 131067, 97, 0, 131068, 118, 0, 131069, 118, 0, 131070, 118, 0, 131071, 89, 0, 65559, 87, 0, 65560, 118, 0, 65561, 96, 0, 65562, 118, 0, 65563, 97, 0, 65564, 97, 0, 65565, 97, 0, 65566, 97, 0, 65567, 97, 0, 196599, 97, 0, 196600, 118, 0, 196601, 97, 0, 196602, 96, 0, 196603, 97, 0, 196604, 118, 0, 196605, 118, 0, 196606, 118, 0, 196607, 89, 0, 131095, 87, 0, 131096, 118, 0, 131097, 118, 0, 131098, 118, 0, 131099, 96, 0, 131100, 97, 0, 131101, 97, 0, 131102, 97, 0, 131103, 97, 0, 262135, 97, 0, 262136, 118, 0, 262137, 96, 0, 262138, 97, 0, 262139, 97, 0, 262140, 118, 0, 262141, 118, 0, 262142, 118, 0, 262143, 89, 0, 196631, 87, 0, 196632, 118, 0, 196633, 118, 0, 196634, 118, 0, 196635, 96, 0, 196636, 97, 0, 196637, 97, 0, 196638, 97, 0, 196639, 97, 0, 327671, 97, 0, 327672, 118, 0, 327673, 97, 0, 327674, 97, 0, 327675, 97, 0, 327676, 118, 0, 327677, 118, 0, 327678, 118, 0, 327679, 80, 0, 262167, 53, 0, 262168, 118, 0, 262169, 118, 0, 262170, 118, 0, 262171, 96, 0, 262172, 97, 0, 262173, 97, 0, 262174, 97, 0, 262175, 97, 0, 393207, 97, 0, 393208, 96, 0, 393209, 118, 0, 393210, 97, 0, 393211, 97, 0, 393212, 96, 0, 393213, 96, 0, 393214, 118, 0, 393215, 85, 0, 327680, 68, 0, 327681, 76, 0, 327682, 79, 0, 327683, 75, 0, 327690, 76, 0, 327691, 79, 0, 327692, 75, 0, 327693, 68, 0, 327694, 58, 0, 327695, 47, 0, 327696, 46, 0, 327697, 45, 0, 327698, 44, 0, 327699, 68, 0, 327700, 76, 0, 327701, 79, 0, 327702, 75, 0, 327703, 88, 0, 327704, 118, 0, 327705, 118, 0, 327706, 118, 0, 327707, 96, 0, 327708, 97, 0, 327709, 97, 0, 327710, 97, 0, 327711, 97, 0, 458743, 97, 0, 458744, 97, 0, 458745, 118, 0, 458746, 96, 0, 458747, 97, 0, 458748, 118, 0, 458749, 96, 0, 458750, 118, 0, 458751, 89, 0, 393216, 96, 0, 393217, 97, 0, 393218, 96, 0, 393219, 98, 0, 393220, 68, 0, 393221, 58, 0, 393222, 47, 0, 393223, 46, 0, 393224, 45, 0, 393225, 44, 0, 393226, 118, 0, 393227, 118, 0, 393228, 118, 0, 393229, 118, 0, 393230, 72, 0, 393231, 118, 0, 393232, 118, 0, 393233, 118, 0, 393234, 118, 0, 393235, 118, 0, 393236, 118, 0, 393237, 118, 0, 393238, 118, 0, 393239, 87, 0, 393240, 118, 0, 393241, 96, 0, 393242, 97, 0, 393243, 97, 0, 393244, 97, 0, 393245, 97, 0, 393246, 97, 0, 393247, 97, 0, 524279, 97, 0, 524280, 97, 0, 524281, 97, 0, 524282, 118, 0, 524283, 96, 0, 524284, 96, 0, 524285, 96, 0, 524286, 118, 0, 524287, 89, 0, 458752, 97, 0, 458753, 96, 0, 458754, 97, 0, 458755, 99, 0, 458756, 98, 0, 458757, 72, 0, 458758, 118, 0, 458759, 116, 0, 458760, 118, 0, 458761, 118, 0, 458762, 118, 0, 458763, 118, 0, 458764, 118, 0, 458765, 118, 0, 458766, 118, 0, 458767, 118, 0, 458768, 118, 0, 458769, 118, 0, 458770, 118, 0, 458771, 118, 0, 458772, 118, 0, 458773, 118, 0, 458774, 118, 0, 458775, 87, 0, 458776, 96, 0, 458777, 96, 0, 458778, 97, 0, 458779, 97, 0, 458780, 97, 0, 458781, 97, 0, 458782, 97, 0, 458783, 97, 0, 589815, 97, 0, 589816, 97, 0, 589817, 97, 0, 589818, 97, 0, 589819, 118, 0, 589820, 118, 0, 589821, 96, 0, 589822, 118, 0, 589823, 80, 0, 524288, 118, 0, 524289, 118, 0, 524290, 99, 0, 524291, 98, 0, 524292, 99, 0, 524293, 118, 0, 524294, 116, 0, 524295, 118, 0, 524296, 116, 0, 524297, 118, 0, 524298, 118, 0, 524299, 118, 0, 524300, 118, 0, 524301, 118, 0, 524302, 118, 0, 524303, 118, 0, 524304, 118, 0, 524305, 118, 0, 524306, 118, 0, 524307, 118, 0, 524308, 118, 0, 524309, 118, 0, 524310, 118, 0, 524311, 53, 0, 524312, 118, 0, 524313, 96, 0, 524314, 97, 0, 524315, 97, 0, 524316, 97, 0, 524317, 97, 0, 524318, 97, 0, 524319, 97, 0, 655351, 96, 0, 655352, 96, 0, 655353, 118, 0, 655354, 118, 0, 655355, 118, 0, 655356, 118, 0, 655357, 96, 0, 655358, 96, 0, 655359, 96, 0, 589824, 96, 0, 589825, 96, 0, 589826, 96, 0, 589827, 96, 0, 589828, 96, 0, 589829, 96, 0, 589830, 96, 0, 589831, 96, 0, 589832, 96, 0, 589833, 96, 0, 589834, 96, 0, 589835, 96, 0, 589836, 96, 0, 589837, 96, 0, 589838, 96, 0, 589839, 118, 0, 589840, 118, 0, 589841, 96, 0, 589842, 96, 0, 589843, 96, 0, 589844, 96, 0, 589845, 96, 0, 589846, 96, 0, 589847, 96, 0, 589848, 96, 0, 589849, 96, 0, 589850, 97, 0, 589851, 96, 0, 589852, 96, 0, 589853, 96, 0, 589854, 96, 0, 589855, 96, 0, 720887, 96, 0, 720888, 96, 0, 720889, 118, 0, 720890, 118, 0, 720891, 96, 0, 720892, 96, 0, 720893, 96, 0, 720894, 96, 0, 720895, 96, 0, 655360, 118, 0, 655361, 118, 0, 655362, 118, 0, 655363, 118, 0, 655364, 118, 0, 655365, 118, 0, 655366, 118, 0, 655367, 118, 0, 655368, 118, 0, 655369, 118, 0, 655370, 118, 0, 655371, 118, 0, 655372, 118, 0, 655373, 118, 0, 655374, 118, 0, 655375, 118, 0, 655376, 118, 0, 655377, 118, 0, 655378, 118, 0, 655379, 118, 0, 655380, 96, 0, 655381, 118, 0, 655382, 118, 0, 655383, 96, 0, 655384, 96, 0, 655385, 96, 0, 655386, 96, 0, 655387, 96, 0, 655388, 96, 0, 655389, 96, 0, 655390, 96, 0, 655391, 96, 0, 786423, 96, 0, 786424, 96, 0, 786425, 96, 0, 786426, 118, 0, 786427, 118, 0, 786428, 118, 0, 786429, 118, 0, 786430, 118, 0, 786431, 118, 0, 720896, 96, 0, 720897, 96, 0, 720898, 96, 0, 720899, 96, 0, 720900, 96, 0, 720901, 118, 0, 720902, 118, 0, 720903, 118, 0, 720904, 118, 0, 720905, 118, 0, 720906, 118, 0, 720907, 118, 0, 720908, 118, 0, 720909, 118, 0, 720910, 118, 0, 720911, 118, 0, 720912, 118, 0, 720913, 118, 0, 720914, 118, 0, 720915, 118, 0, 720916, 118, 0, 720917, 118, 0, 720918, 96, 0, 720919, 96, 0, 720920, 96, 0, 720921, 96, 0, 720922, 96, 0, 720923, 96, 0, 720924, 96, 0, 720925, 96, 0, 720926, 96, 0, 720927, 96, 0 )

[node name="Potions" type="Node2D" parent="."]

[node name="Potion" parent="Potions" instance=ExtResource( 5 )]
position = Vector2( 337.463, 275.667 )

[node name="Potion2" parent="Potions" instance=ExtResource( 5 )]
position = Vector2( 751.091, 227.539 )

[node name="Sprite" parent="Potions/Potion2" index="1"]
texture = ExtResource( 11 )

[node name="Balances" type="Node2D" parent="."]

[node name="Balance_If_Else_Diamond_If" parent="Balances" instance=ExtResource( 4 )]
position = Vector2( 587.963, 179.354 )

[node name="Balance_If_Else_Diamond_Else" parent="Balances" instance=ExtResource( 2 )]
position = Vector2( 881.035, 180.167 )

[node name="Chests" type="Node2D" parent="."]

[node name="Chest_Show_Potion" parent="Chests" instance=ExtResource( 6 )]
position = Vector2( 641.49, 220.303 )
animation = "idle"
frame = 0

[node name="Chest_Show_Potion_Invert" parent="Chests" instance=ExtResource( 3 )]
position = Vector2( 938.937, 220.175 )

[node name="Door" parent="." instance=ExtResource( 12 )]
position = Vector2( 1043.64, 211.971 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 70.5891, 214.584 )

[node name="Scroll" parent="Player" index="4"]
position = Vector2( -244.922, -77.1779 )
texture = ExtResource( 9 )

[node name="Label" parent="Player/Scroll" index="0"]
margin_left = -44.5474
margin_top = -50.5298
margin_right = 30.4526
margin_bottom = -17.5298
text = "if 2 > 1:
   print(2)"

[node name="Label2" parent="Player/Scroll" index="1"]
margin_left = -44.8444
margin_top = -15.0634
margin_right = 30.1556
margin_bottom = 17.9366
text = "if 2 > 3:
   print(2)"

[node name="Label3" parent="Player/Scroll" index="2"]
margin_left = -46.9105
margin_top = 16.8158
margin_right = 29.0895
margin_bottom = 49.8158
text = "else:
   print(3)"

[node name="Label4" parent="Player/Scroll" index="3"]
margin_left = -102.087
margin_top = -3.10401
margin_right = 1.91263
margin_bottom = 27.896
text = ""

[node name="Label5" parent="Player/Scroll" index="4"]
margin_left = -101.328
margin_top = -5.46665
margin_right = -41.3284
margin_bottom = 25.5334
text = "if A > B:
   print(A)"

[node name="Label6" parent="Player/Scroll" index="5"]
margin_left = -101.747
margin_top = 27.5139
margin_right = 5.25301
margin_bottom = 58.5139
text = "else:
   print()"

[editable path="Potions/Potion2"]

[editable path="Player"]
